--- a/nononono/79633-around-the-world-in-80-bladders/f-s/rus.textile
+++ b/nononono/79633-around-the-world-in-80-bladders/f-s/rus.textile
@@ -6,7 +6,7 @@
 
 Это серия антологий, исследующая женщин и их мочевые пузыри в нескольких (вероятно, не буквально 80!) разных странах. Надеюсь, ты повеселишься!
 
-###
+___
 
 Лондон, Соединённое Королевство
 
@@ -30,9 +30,11 @@
 
 «Есть ли шанс, что мы сможем остановиться на ближайшей заправочной станции?» — спросила Эмбер.
 
-Джордж покачал головой. «Боюсь, что нет, мы и так сильно отстаём от графика, и у меня есть ещё одна работа сразу после этой».
+Джордж покачал головой.
 
-Эмбер кивнула и возобновила пролистывание Instagram, надеясь, что это отвлечёт её от постоянно растущей потребности. Она привыкла его держать. Туалет в её туристическом автобусе был таким мрачным, что она воспользовалась им всего дважды, и оба раза, когда её буквально разрывало. Это не было похоже на настоящий концерт, если только она не прибыла на место на грани того, чтобы обмочиться. Но она всегда успевала. Уже.
+«Боюсь, что нет, мы и так сильно отстаём от графика, и у меня есть ещё одна работа сразу после этой».
+
+Эмбер кивнула и возобновила пролистывание Instagram, надеясь, что это отвлечёт её от постоянно растущей потребности. Она привыкла его держать. Туалет в её туристическом автобусе был таким мрачным, что она воспользовалась им всего дважды, и оба раза, когда её буквально разрывало. Это не было похоже на настоящий концерт, если только она не прибыла на место на грани того, чтобы обоссаться. Но она всегда успевала. Уже.
 
 ###
 
@@ -60,11 +62,17 @@
 
 Началась гитара, и Эмбер тут же снова почувствовала свой мочевой пузырь. Баллон с жидкостью внутри неё, который бездействовал, теперь снова давал о себе знать, и она изо всех сил пыталась восстановить самообладание, едва не промахнувшись в процессе.
 
-«Ещё один вечер впустую», — напевала Алуна, изо всех сил стараясь устоять на сцене. «Жду у телефона». Толпа не обращала внимания на её затруднительное положение, но Эмбер чувствовала, что все глаза смотрят на неё, ожидая каскада мочи, который отчаянно пытался вырваться.
+«Ещё один вечер впустую, — напевала Алуна, изо всех сил стараясь устоять на сцене. — Жду у телефона».
 
-«Ты сказал мне, что будешь дома к полуночи, но я сплю совсем одна», — её голос слегка надломился, игнорируя срочные сигналы мочевого пузыря. «Ты сказал мне, что я псих, но ты так хороша в постели», Алуна пропустила последнюю ноту, когда по её ноге стекала капля мочи. «Мои друзья говорят мне бросить тебя, но я не могу выкинуть тебя из головы». Когда она приближалась к припеву, её мочевой пузырь не выдержал.
+Толпа не обращала внимания на её затруднительное положение, но Эмбер чувствовала, что все глаза смотрят на неё, ожидая каскада мочи, который отчаянно пытался вырваться.
 
-«Потому что я оооеноеее к тебе ооо! Алуна запела припев, стараясь изо всех сил игнорировать тот факт, что она обмочилась перед 20 000 человек. Поток мочи забарабанил по полу сцены, медленно пропитывая её джинсовую юбку и высокие каблуки. Вздохи публики сопровождались неправильными нотами группы, которые были в равной степени потрясены увиденным. «Но я бы хотела, чтобы ты любил меня тожеооо со сочи со за согнут за затыл за запястья с затылком за затылком».
+— Ты сказал мне, что будешь дома к полуночи, но я сплю совсем одна, — её голос слегка надломился, игнорируя срочные сигналы мочевого пузыря. — Ты сказал мне, что я психопатка, но ты так хороша в постели...
+
+Алуна пропустила последнюю ноту, когда по её ноге стекала капля мочи. «Мои друзья говорят мне бросить тебя, но я не могу выкинуть тебя из головы». Когда она приближалась к припеву, её мочевой пузырь не выдержал.
+
+«Потому что я оооеноеее к тебе ооо! Алуна запела припев, стараясь изо всех сил игнорировать тот факт, что она обмочилась перед 20 000 человек. Поток мочи забарабанил по полу сцены, медленно пропитывая её джинсовую юбку и высокие каблуки. Вздохи публики сопровождались неправильными нотами группы, которые были в равной степени потрясены увиденным. 
+
+— Но я бы хотела, чтобы ты любил меня тожеооо со сочи со за согнут за затыл за запястья с затылком за затылком.
 
 Она не закончила песню. Ошеломлённая ситуацией, она убежала за кулисы, пряча лицо от слёз. Толпа освистала, почувствовав, что это конец концерта, всего три с половиной песни до вечера. В одиночестве и вне поля зрения она рухнула на пол и вздохнула, полностью опорожнив свой мочевой пузырь, зная, что она была посмешищем.
 
@@ -74,9 +82,11 @@
 
 «Не унывайте. Ферги обмочилась на сцене, и у неё всё в порядке», — засмеялась австралийка.
 
-Эмбер не могла найти улыбку. «И всё же мы всё ещё говорим об этом всё это время спустя».
+Эмбер не могла найти улыбку.
 
-— Эй, просто пытаюсь думать о хорошем, — пробормотал Брюс. «Итак, вот план. Вы скрываетесь на несколько месяцев. Удалите свои учётные записи в социальных сетях, заставьте людей по-настоящему беспокоиться о вас. Затем бум, новый сингл, осуждающее интервью с Грэмом Нортоном, мы вернулись к нормальной жизни».
+— И всё же мы всё ещё говорим об этом всё это время спустя.
+
+— Эй, просто пытаюсь думать о хорошем, — пробормотал Брюс. — Итак, вот план. Вы скрываетесь на несколько месяцев. Удалите свои учётные записи в социальных сетях, заставьте людей по-настоящему беспокоиться о вас. Затем бум, новый сингл, осуждающее интервью с Грэмом Нортоном, мы вернулись к нормальной жизни.
 
 Эмбер кивнула. Брюс всегда знал лучше. Тишину разорвал стук в дверь.
 
@@ -84,13 +94,23 @@
 
 «Эй, эм, я просто хотел извиниться. Я должен был выслушать тебя, я не понимал, в каком ты отчаянии, и эм, мне очень жаль», — застенчиво извинился Майк, уставившись в пол для большую часть времени.
 
-«Эй, ты, чёртов идиот, ты дорого нам обошёлся, нам придётся вернуть деньги всем этим ублюдкам, потому что ты думаешь, что можешь сказать одной из самых больших поп-звёзд на планете, когда она может и не может ссать! Бейонсе, ей нельзя трахаться в туалете?» Майк покачал головой. «Ты не мог бы сказать Дуа Липе, что она должна держать это в себе?» Он снова покачал головой. «Так зачем тебе говорить Алуне Скай, что она не может пойти поссать?» — взревел Брюс.
+«Эй, ты, чёртов идиот, ты дорого нам обошёлся, нам придётся вернуть деньги всем этим ублюдкам, потому что ты думаешь, что можешь сказать одной из самых больших поп-звёзд на планете, когда она может и не может ссать! Бейонсе, ей нельзя трахаться в туалете?» 
+
+Майк покачал головой. 
+
+— Ты не мог бы сказать Дуа Липе, что она должна держать это в себе?
+
+Он снова покачал головой. 
+
+— Так зачем тебе говорить Алуне Скай, что она не может пойти поссать?» — взревел Брюс.
 
 — Прости, — прохрипел Майк.
 
-«Ты, блядь, уволен», — заорал Брюс. Эмбер отказалась смотреть в его сторону, а молодой человек со слезами на глазах кивнул и вышел из комнаты.
+— Ты уволен, — заорал Брюс. 
 
-«И что теперь?» — спросила Эмбер.
+Эмбер отказалась смотреть в его сторону, а молодой человек со слезами на глазах кивнул и вышел из комнаты.
+
+— И что теперь? — спросила Эмбер.
 
 «Мы идём в твой пентхаус, заказываем хренову кучу пиццы и прячемся, пока они не вызовут на тебя чёртову поисковую группу», — улыбнулся Брюс. — Машина ждёт тебя снаружи.
 
@@ -106,13 +126,25 @@
 
 27-летняя Элоди Гаске потягивала кофе, пролистывая «Монд». Всё было как обычно: число случаев Covid-19 росло, цены на топливо росли, война в Украине всё ещё бушевала. Лишь рассказ об английской поп-звезде Алуне Скай, которая обмочилась во время концерта в О2, прервал угнетающий натиск статей о смерти, войне и нищете. Элоди позволила себе лёгкий смешок над иронией того, что её мочевой пузырь отказывается, пока она исполняет «Holding On». Элоди не была уроженкой Парижа, а родом из Лиона. Но сегодня у неё было собеседование с людьми, которые написали слова, которые она усвоила со своим круассаном и кофе по завышенным ценам. После пяти лет работы журналистом в лионской газете Le Progres она была готова к переменам.
 
-А что может быть лучше, чем работать в одной из крупнейших газет Франции? Она проверила свой телефон, у неё было около часа до интервью. «Пора прогуляться, чтобы проветрить голову», — подумала Элоди. Направившись в в*нную, Элоди отшатнулась, открывая кабинку. Сиденье унитаза было покрыто мочой, и какой-то невнимательный придурок не смыл его, оставив в унитазе испачканную дерьмом туалетную бумагу. Один только запах был невыносим. В Париже за собой не убирают? Элоди мрачно подумала про себя. К счастью, она ходила только в туалет, так как чувствовала, что могла бы, если бы у неё было время. Она ни в коем случае не была в отчаянии и вполне могла дождаться, пока попадёт в «Ле Монд».
+А что может быть лучше, чем работать в одной из крупнейших газет Франции? Она проверила свой телефон, у неё было около часа до интервью. 
+
+«Пора прогуляться, чтобы проветрить голову», — подумала Элоди. 
+
+Направившись в туалет, Элоди отшатнулась, открывая кабинку. Сиденье унитаза было покрыто мочой, и какой-то невнимательный придурок не смыл его, оставив в унитазе испачканную дерьмом туалетную бумагу. Один только запах был невыносим. 
+
+«В Париже за собой не убирают!» — мрачно подумала Эоди про себя. 
+
+К счастью, она ходила только в туалет, так как чувствовала, что могла бы, если бы у неё было время. Она ни в коем случае не была в отчаянии и вполне могла дождаться, пока попадёт в «Ле Монд».
 
 Элоди мысленно перебирала свои записи, пока шла по Сене. По правде говоря, она действительно не знала, чего ожидать. У неё не было интервью с тех пор, как пять лет назад она получила работу в «Прогрессе». Она отчаянно пыталась вспомнить каждое преувеличение, которое она включила в своё сопроводительное письмо, каждую деталь, которой она злоупотребила, чтобы заполнить своё резюме. Она ещё раз проверила свой наряд — тёмно-синий костюм с белым джемпером, из-за которого она слегка вспотела более жарким, чем обычно, мартовским утром. Она сделала большой глоток из бутылки с водой, так как у неё пересыхало во рту, когда она нервничала. Говоря о нервах, ей нужно было пописить в сотый раз за это утро. Она знала, что это в основном просто нервная реакция, но всё же это причиняло небольшой дискомфорт невысокой брюнетке. Проходя мимо одного из множества тускло-серых общественных туалетов, которыми раскинулись парижские улицы, она подумала, не воспользоваться ли им. Но по опыту она знала, что они довольно отвратительны и их можно использовать только в ужасных ситуациях.
 
-Поняв, что опередила время, она остановилась у реки. Вытащив телефон, она проверила Google Maps, чтобы убедиться, что идёт в правильном направлении. Её телефон согласился, предсказав, что она доберётся до офиса за десять минут. Пришло сообщение от её парня: «Удачи на собеседовании, ты будешь потрясающим». Элоди улыбнулась и пошла отвечать. Прежде чем она успела нажать кнопку «Отправить», она ахнула, когда двое подростков в капюшонах промчались мимо, катаясь на велосипедах по тротуару. В шоке после того, как второй мальчик едва не врезался прямо в неё, Элоди выпустила свой телефон, уронив его прямо в реку Сену. «Блядь!!!!» Элоди кричала никому конкретно, так как оба мальчика уже уехали на велосипеде вдаль. Ей хотелось плакать, но она знала, что не может. Пришло время собраться. Телефон мог подождать, теперь ей просто нужно было сосредоточиться на том, чтобы как можно лучше выступить в своём интервью.
+Поняв, что опередила время, она остановилась у реки. Вытащив телефон, она проверила Google Maps, чтобы убедиться, что идёт в правильном направлении. Её телефон согласился, предсказав, что она доберётся до офиса за десять минут. Пришло сообщение от её парня: «Удачи на собеседовании, ты будешь потрясающим». Элоди улыбнулась и пошла отвечать. Прежде чем она успела нажать кнопку «Отправить», она ахнула, когда двое подростков в капюшонах промчались мимо, катаясь на велосипедах по тротуару. В шоке после того, как второй мальчик едва не врезался прямо в неё, Элоди выпустила свой телефон, уронив его прямо в реку Сену. 
 
-###
+«Чёрт!» — закричала Элоди никому конкретно, так как оба мальчика уже уехали на велосипеде вдаль. 
+
+Ей хотелось плакать, но она знала, что не может. Пришло время собраться. Телефон мог подождать, теперь ей просто нужно было сосредоточиться на том, чтобы как можно лучше выступить в своём интервью.
+
+___
 
 «Здравствуйте, меня зовут Элоди Гаске, у меня сегодня собеседование в 11», — выдохнула Элоди. Она была вспотевшая, напряжённая, и ей очень нужно было в туалет. Она также опоздала, пытаясь найти здание без помощи Google Maps.
 
@@ -122,23 +154,29 @@
 
 «Мистер Мийо, это мисс Гаске», — объявила строгая секретарша, когда Элоди застенчиво махнула рукой в ??комнату со своими тремя соперницами и мистером Мийо, одним из редакторов.
 
-— А, мисс Гаске, я вижу, вы нас нашли, — пожал руку мистер Мийо, его тон был теплее, чем она ожидала от редактора крупной газеты. «У вас есть 55 минут, чтобы подготовить мини-газету вместе с другими кандидатами. К сожалению, поскольку вы опоздали, вы не можете выбрать свою историю. Вся необходимая информация находится на столе, просто постарайтесь!»
+— А, мисс Гаске, я вижу, вы нас нашли, — пожал руку мистер Мийо, его тон был теплее, чем она ожидала от редактора крупной газеты. — У вас есть 55 минут, чтобы подготовить мини-газету вместе с другими кандидатами. К сожалению, поскольку вы опоздали, вы не можете выбрать свою историю. Вся необходимая информация находится на столе, просто постарайтесь!
 
 Элоди кивнула и села. Её мочевой пузырь неприятно хлюпал, быстро наполняя её прежнюю бутылку кофе и воды. Она просмотрела информацию, она застряла, сочиняя статью о росте счетов за воду. Перемещаясь в поисках наиболее удобного положения, она начала анализировать лежащие перед ней источники и планировала свою статью.
 
 ###
 
-Ноги Элоди теперь были плотно скрещены, но она, по крайней мере, закончила свою статью. Писать о стоимости водопроводной воды оказалось дополнительным испытанием для её мочевого пузыря, который жаждал облегчения, но она знала, что очень скоро сможет позаботиться о своей потребности. Отчаянно глядя на часы и ёрзая на стуле, Элоди с облегчением услышала голос мистера Милло. «Хорошо, пришло ваше время, спасибо всем за вашу тяжёлую работу!»
+Ноги Элоди теперь были плотно скрещены, но она, по крайней мере, закончила свою статью. Писать о стоимости водопроводной воды оказалось дополнительным испытанием для её мочевого пузыря, который жаждал облегчения, но она знала, что очень скоро сможет позаботиться о своей потребности. Отчаянно глядя на часы и ёрзая на стуле, Элоди с облегчением услышала голос мистера Милло. 
 
-Он схватил копию их готовой газеты и улыбнулся, просматривая её. «Сейчас я прочитаю его, а потом мы вскоре позвоним вам для индивидуального собеседования!»
+— Хорошо, пришло ваше время, спасибо всем за вашу тяжёлую работу!
 
-Четверых подвели к дивану рядом со стойкой регистрации. Элоди не могла не заметить, что один из других заявителей выглядела довольно неважно, и её подозрения подтвердились, когда она услышала, как она обратилась к администратору: «Извините, где туалет?» Секретарша указала на в*нную комнату для одного человека, к которой женщина чуть постарше практически побежала.
+Он схватил копию их готовой газеты и улыбнулся, просматривая её. 
 
-— Есть ещё одна в*нная? — спросила Элоди, изо всех сил стараясь не танцевать на месте.
+— Сейчас я прочитаю его, а потом мы вскоре позвоним вам для индивидуального собеседования!
 
-Администратор покачала головой: «Боюсь, посетителям разрешено пользоваться этой в*нной. Не волнуйтесь, я уверена, что она не задержится», — добавила она второе предложение, увидев выражение отчаяния на лице Элоди. .
+Четверых подвели к дивану рядом со стойкой регистрации. Элоди не могла не заметить, что один из других заявителей выглядела довольно неважно, и её подозрения подтвердились, когда она услышала, как она обратилась к администратору: «Извините, где туалет?» Секретарша указала на туалетную комнату для одного человека, к которой женщина чуть постарше практически побежала.
 
-Элоди ухмыльнулась, хотя подозревала, что это больше походило на гримасу. Она села рядом с двумя другими кандидатами, инстинктивно потянувшись за телефоном, прежде чем поняла, что у неё больше нет такой возможности. Вместо этого она ещё раз пробежалась по своим вопросам интервью, неоднократно проверяя, откроется ли дверь в в*нную.
+— Есть ещё один туалет? — спросила Элоди, изо всех сил стараясь не танцевать на месте.
+
+Администратор покачала головой: 
+
+— Боюсь, посетителям разрешено пользоваться этим туалетом. Не волнуйтесь, я уверена, что она не задержится, — добавила она второе предложение, увидев выражение отчаяния на лице Элоди.
+
+Элоди ухмыльнулась, хотя подозревала, что это больше походило на гримасу. Она села рядом с двумя другими кандидатами, инстинктивно потянувшись за телефоном, прежде чем поняла, что у неё больше нет такой возможности. Вместо этого она ещё раз пробежалась по своим вопросам интервью, неоднократно проверяя, откроется ли дверь в туалет.
 
 На Элоди нахлынула волна нетерпения, и она скрестила ноги чуть крепче, чтобы её белые трусики оставались сухими. Недолго думая, она легонько постучала ногой и поборола желание открыто держать себя в руках. Элоди по глупости выпила ещё одну бутылку воды во время интервью, рассеянно пытаясь бороться с сухостью во рту. Теперь она расплачивалась за это, её мочевой пузырь действительно был переполнен.
 
@@ -148,33 +186,35 @@
 
 — Так откуда ты? он спросил.
 
-Пока они обменивались светской беседой, Элоди едва могла скрыть своё отчаяние, когда в*нная стала доступной, только для того, чтобы другой оставшийся заявитель пошёл и воспользовался ею. Пожилая женщина вернулась, выглядя гораздо более облегчённой, и громко вздохнула, когда села рядом с ними двумя.
+Пока они обменивались светской беседой, Элоди едва могла скрыть своё отчаяние, когда туалет стал доступен, только для того, чтобы другой оставшийся заявитель пошёл и воспользовался ею. Пожилая женщина вернулась, выглядя гораздо более облегчённой, и громко вздохнула, когда села рядом с ними двумя.
 
-«Слава Богу, я думала, что попаду в аварию», — усмехнулась она. «Ты поймёшь, что я имею в виду, когда у тебя будут дети», — добавила она, улыбаясь Элоди.
+— Слава Богу, я думала, что обоссусь, — усмехнулась она. — Ты поймёшь, что я имею в виду, когда у тебя будут дети», — добавила она, улыбаясь Элоди.
 
-Элоди неловко рассмеялась, отчаянно надеясь, что её мышцы тазового дна останутся сильными. Они втроём болтали, но вскоре после этого Элоди больше не могла сосредоточиться на разговоре, вместо этого медленно сводя с ума из-за запертой двери в*нной. Парень пробыл там по крайней мере пять минут, и Элоди больше не могла этого выносить.
+Элоди неловко рассмеялась, отчаянно надеясь, что её мышцы тазового дна останутся сильными. Они втроём болтали, но вскоре после этого Элоди больше не могла сосредоточиться на разговоре, вместо этого медленно сводя с ума из-за запертой двери туалета. Парень пробыл там по крайней мере пять минут, и Элоди больше не могла этого выносить.
 
-«Извините, я могу воспользоваться другой в*нной? Это очень срочно», — спросила Элоди у администратора.
+«Извините, я могу воспользоваться другим ткалетом? Это очень срочно», — спросила Элоди у администратора.
 
 «Извините, туалет для посетителей только один», — прямо ответила она.
 
-Элоди застонала и, взяв дело в свои руки, направилась в в*нную. Она агрессивно постучала в дверь.
+Элоди застонала и, взяв дело в свои руки, направилась в туалет. Она агрессивно постучала в дверь.
 
 «Как долго вы собираетесь быть?» она спросила.
 
-Мужчина застонал. «Извините, я, должно быть, съел что-то не то. Это займёт какое-то время».
+Мужчина застонал. 
+
+— Извините, я, должно быть, съел что-то не то. Это займёт какое-то время...
 
 Элоди чуть не закричала от отчаяния, но взяла себя в руки. Когда она вернулась к дивану, мистер Милло уже ждал её.
 
 — Мисс Гаске, не хотите ли пройти?
 
-###
+___
 
-Ей потребовались все силы, чтобы не обмочиться на стуле, пока мистер Милло наливал ей стакан воды.
+Ей потребовались все силы, чтобы не обоссаться на стуле, пока мистер Милло наливал ей стакан воды.
 
 — Итак, мисс Гаске, расскажите нам немного о себе?
 
-«Я на грани того, чтобы обмочиться в твоём кабинете», — подумала Элоди. На самом деле, она взволнованно ответила, подробно описывая свою карьеру, изо всех сил стараясь удержать скорость речи. Г-н Милло и два других журналиста в группе кивнули в унисон, по-видимому, впечатлённые её резюме.
+«Я на грани того, чтобы обоссаться в твоём кабинете», — подумала Элоди. На самом деле, она взволнованно ответила, подробно описывая свою карьеру, изо всех сил стараясь удержать скорость речи. Г-н Милло и два других журналиста в группе кивнули в унисон, по-видимому, впечатлённые её резюме.
 
 «Что вы можете привнести в эту работу?»
 
@@ -202,9 +242,12 @@
 
 20-летняя Мэй Минуки чрезмерно драматично ахнула, когда она добровольно выпустила свой мучительно полный мочевой пузырь. Её моча расплескалась по деревянным половицам, а оператор Такуми был готов запечатлеть каждую каплю. Они находились на верхнем этаже склада в центре Токио, и для Мэй это была последняя съёмка дня. То, что начиналось как подработка, теперь превратилось в полноценную карьеру Мэй, и она стала популярной фигурой в сообществе Омораси. Несколько лет назад Мэй даже не знала, кто такой Омораси. Но она случайно встретила продюсера в баре, и её уговорили дать ему шанс. По правде говоря, ей это очень нравилось, и это принесло ей приличную сумму денег, достаточную, чтобы уйти от неодобряющих родителей.
 
-«Хорошо, мы получили это!» — крикнул Кей, требовательный продюсер, которого Мэй встретила в баре восемнадцать месяцев назад. «Пойдём».
+— Хорошо, мы получили это! — крикнул Кей, требовательный продюсер, которого Мэй встретила в баре восемнадцать месяцев назад. — Пойдём!
 
-«Я просто пойду приму душ», Мэй сняла пропитанные мочой трусики и сняла лифчик, закрывавший её маленькую, но упругую грудь. Мэй обнаружила, что всякая застенчивость по поводу своего тела исчезала, как только она шла на съёмочную площадку.
+— Я просто пойду приму душ!
+
+Мэй сняла пропитанные мочой трусики и сняла лифчик, закрывавший её маленькую, но упругую грудь. Мэй 
+обнаружила, что всякая застенчивость по поводу своего тела исчезала, как только она шла на съёмочную площадку.
 
 — Мне пора идти, увидимся завтра! Кей помахал на прощание и поспешил уйти с Такуми и другими операторами.
 
@@ -272,7 +315,7 @@
 
 «Две минуты на фронте», — ответил Рамос, уже отходя от своего нового офицера.
 
-— Ублюдок, — пробормотала Мария себе под нос. Увидев столовую в комнате отдыха, она воспользовалась возможностью, чтобы наполнить свой теперь пустой бумажный стаканчик. Она плохо спала и нуждалась во всём кофеине, который могла получить. Сознавая, что она не пользовалась в*нной с тех пор, как проснулась, она решила, что ей тоже следует облегчиться. Меньше всего ей хотелось, чтобы её застали врасплох в первый же день. Особенно во время работы с Рамосом. Прежде чем она успела добраться до туалета, её прервал знакомый голос.
+— Ублюдок, — пробормотала Мария себе под нос. Увидев столовую в комнате отдыха, она воспользовалась возможностью, чтобы наполнить свой теперь пустой бумажный стаканчик. Она плохо спала и нуждалась во всём кофеине, который могла получить. Сознавая, что она не пользовалась туалтеом с тех пор, как проснулась, она решила, что ей тоже следует облегчиться. Меньше всего ей хотелось, чтобы её застали врасплох в первый же день. Особенно во время работы с Рамосом. Прежде чем она успела добраться до туалета, её прервал знакомый голос.
 
 «Марияааа!»
 
@@ -310,12 +353,13 @@
 
 Рамос посмотрел на часы. «Я полагаю, что мы пробыли здесь какое-то время. Поторопись».
 
-«Спасибо Спасибо спасибо!» Мария бежала так быстро, как только могла, по улице. Её горящая глазница дрожала, когда она мчалась по улице с тяжёлым, как валун, мочевым пузырём. Она действительно распирала от облегчения, и она почти отпустила там и тогда, когда она увидела знак для в*нных комнат.
+«Спасибо Спасибо спасибо!» Мария бежала так быстро, как только могла, по улице. Её горящая глазница дрожала, когда она мчалась по улице с тяжёлым, как валун, мочевым пузырём. Она действительно распирала от облегчения, и она почти отпустила там и тогда, когда она увидела знак для туалетных комнат.
 
 «Полиция, полиция!» — крикнул кто-то с другой стороны.
 
-Марии хотелось плакать. Она была буквально за дверью в в*нную, но теперь ей пришлось отложить в сторону свою потребность помочь невинному гражданскому лицу. Она увидела мужчину в балаклаве, убегающего с места преступления, и решила, что это её преступник. Ей казалось, что при каждом шаге ей в живот вонзается кинжал, и она отплёвывалась, чувствуя, как преступник ускользает. Она знала, что у неё действительно не было выбора, если она хотела запереть кого-то в свой первый день. Расслабляя всё на бегу, её мочевой пузырь провалился в зелёные брюки. Мария была слишком увлечена погоней, чтобы как следует насладиться моментом, поскольку её мочевой пузырь медленно сдувался. Её брюки теперь были пропитаны мочой, которая продолжала литься из её уретры. Ей казалось, что с каждой потерянной порцией жидкости она бежала немного быстрее, и к тому времени, когда её мочевой пузырь полностью опорожнился, она поймала подозреваемого.
+Марии хотелось плакать. Она была буквально за дверью в туалет, но теперь ей пришлось отложить в сторону свою потребность помочь невинному гражданскому лицу. Она увидела мужчину в балаклаве, убегающего с места преступления, и решила, что это её преступник. Ей казалось, что при каждом шаге ей в живот вонзается кинжал, и она отплёвывалась, чувствуя, как преступник ускользает. Она знала, что у неё действительно не было выбора, если она хотела запереть кого-то в свой первый день. Расслабляя всё на бегу, её мочевой пузырь провалился в зелёные брюки. Мария была слишком увлечена погоней, чтобы как следует насладиться моментом, поскольку её мочевой пузырь медленно сдувался. Её брюки теперь были пропитаны мочой, которая продолжала литься из её уретры. Ей казалось, что с каждой потерянной порцией жидкости она бежала немного быстрее, и к тому времени, когда её мочевой пузырь полностью опорожнился, она поймала подозреваемого.
 
 Надев наручники на подозреваемого, она изо всех сил старалась не ухмыляться, потому что наконец-то смогла пописить и поймала своего первого преступника. Рамос бросился к ним, пытаясь перевести дух.
 
 «Я возьму это отсюда, Де Соуза, ты сегодня хорошо поработал!» Рамос, казалось, почти улыбнулся ей, прежде чем посмотреть на её промокшие брюки. «И не волнуйтесь, это случается чаще, чем вы думаете».
+
